--- a/src/Components/view/aNavbar.css
+++ b/src/Components/view/aNavbar.css
@@ -1,72 +1,25 @@
-
-/* ----------nav-------------------------- */
-
-#_Path_{
-  color:green;
+.navbar {
+  display: flex;
+  flex-direction: column;
 }
 
-svg {
-  width: 35px;
-  height: 25px;
-
+#imagem {
+  width: 12%;
 }
 
-#_Group_{
-  width: 40px;
-}
-
-.navbar{
+#sect1 {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  padding-top: 1vw;
-  padding-right: 1vw;
-  padding-bottom: 1vw;
-  padding-left: 2vw;
-
+  padding-top: 0;
+  padding-left: 0;
+  margin: auto;
 }
 
+#sect1 a {
+  margin-right: 1rem; /* Adicione o espaçamento desejado entre os links */
+  color: black;
+  text-decoration: none;
+  font-size: 13px;
+  font-family: 'Spectral', serif;
 
-        #sect1{
-          display: flex;
-          flex-direction: row;
-        }
-
-        #sect2{
-          display: flex;
-          flex-direction: row;
-          padding: 1vw;
-        }
-
-
-
-p{
-  color:  rgba(55, 55, 55, 0.75);
 }
-
-.page-mvp {
-  width: 150px;
-  height: 35px;
-  border-radius: 30px;
-  margin-right: 20px;
-}
-
-.page-mvp a.link-page-mvp {
-  transition: .1s ease;
-  background-color: #0AC5D4;
-  color: #ffffff;
-  text-transform: uppercase;
-  font-size: 12px;
-  font-weight: 500;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50px;
-}
-
-
-        /* ----------nav-------------------------- */
-
-        
